# siriuslooper

./: .gitignore  .gitmodules  404.html  CLAUDE.md  CMakeLists.txt  IDA_Naming_Decision.md  IDA_Rename_Plan.md  LICENSE  README.md  SAMPLE-LICENSE.md  Sirius Looper Whitepaper V2.md  bu.sh  continue.md  index.html  prd.json  progress.txt  robots.txt  run_ralph.sh  sitemap.xml  todo.md
app/: CMakeLists.txt  CapabilityTier.cpp  CapabilityTier.h  DemoSession.cpp  DemoSession.h  FileInputPlayerWindow.cpp  FileInputPlayerWindow.h  FileInputPlayerWindow.mm  IdaPreferences.h  Main.cpp  MainComponent.cpp  MainComponent.h  OttoPane.cpp  OttoPane.h  OttoStripRebind.cpp  OttoStripRebind.h  SessionInspector.cpp  SessionInspector.h  StripContextOverlay.h  TransportBarHost.cpp  TransportBarHost.h
audio/: CMakeLists.txt
audio/include/ida/: AudioCallback.h  AudioPayloadCodec.h  FileInputPersistence.h  FileInputRegistry.h  FileInputSource.h  FlacTapeSink.h  TapePrefetcher.h  TapeRecordReader.h  TapeRecordWriter.h
audio/include/sirius/: AudioCallback.h  FlacTapeSink.h
audio/src/: AudioCallback.cpp  AudioPayloadCodec.cpp  FileInputPersistence.cpp  FileInputRegistry.cpp  FileInputSource.cpp  FlacTapeSink.cpp  TapePrefetcher.cpp  TapeRecordReader.cpp  TapeRecordWriter.cpp
core/: CMakeLists.txt
core/include/ida/: ArchivalMode.h  Arrangement.h  BlankSession.h  CaptureSession.h  ChannelDefaults.h  Constituent.h  ConstituentId.h  ConstituentState.h  EffectChain.h  FileInputDescriptor.h  IEffectChainHost.h  IInternalFxAdapter.h  INotificationSink.h  IOttoRenderSource.h  IOttoTransportListener.h  IdaProject.h  InputDescriptor.h  InputKind.h  InternalFxConfigs.h  InternalFxFactory.h  InternalFxId.h  LoopScope.h  Meter.h  MixerGraphState.h  MonitorMode.h  ParameterAutomation.h  Phrase.h  PlaylistEntryId.h  PluginDescriptor.h  PluginGuiState.h  PluginInstanceId.h  PluginIpcMessage.h  PluginStateRegion.h  Position.h  Promotion.h  Rational.h  RepetitionRules.h  RoleResolver.h  Sha256.h  SharedMemoryRegion.h  (+13 more)
core/include/sirius/: Arrangement.h  CaptureSession.h  ChannelDefaults.h  Constituent.h  ConstituentId.h  ConstituentState.h  EffectChain.h  IEffectChainHost.h  IInternalFxAdapter.h  INotificationSink.h  InputDescriptor.h  InputKind.h  InternalFxId.h  Meter.h  MixerGraphState.h  ParameterAutomation.h  Phrase.h  PluginDescriptor.h  PluginGuiState.h  PluginIpcMessage.h  PluginStateRegion.h  Position.h  Promotion.h  Rational.h  RepetitionRules.h  RoleResolver.h  Sha256.h  SharedMemorySpscQueue.h  Tape.h  TapeDescriptor.h  TapeId.h  TapePool.h  TapeReference.h  TempoMap.h  TimeDomain.h  VersionPinningRecord.h
core/src/: Arrangement.cpp  BlankSession.cpp  CaptureSession.cpp  Constituent.cpp  EffectChain.cpp  IdaProject.cpp  Meter.cpp  Position.cpp  Promotion.cpp  Rational.cpp  RepetitionRules.cpp  RoleResolver.cpp  Sha256.cpp  SharedMemoryRegion.cpp  TapePool.cpp  TapeRecord.cpp  TempoMap.cpp  TimeDomain.cpp  VersionPinningRecord.cpp
engine/: CMakeLists.txt
engine/include/ida/: ActiveReadsSnapshot.h  Asrc.h  AudioDeviceCalibration.h  Bus.h  CalibrationStore.h  Channel.h  ChannelStrip.h  Lmc.h  (+30 more)
engine/src/: Asrc.cpp  AudioDeviceCalibration.cpp  Bus.cpp  CalibrationStore.cpp  Channel.cpp  ConstituentValidator.cpp  DirectLayer.cpp  IPayloadCodec.cpp  InputMixer.cpp  InternalFxFactory.cpp  LatencyTiming.cpp  Lmc.cpp  LoopRenderer.cpp  MasterMeter.cpp  MasterSpectrum.cpp  Membrane.cpp  MixerGraph.cpp  MonotonicClock.cpp  NotificationBus.cpp  OutputMixer.cpp  OverloadProtection.cpp  PlaybackResolver.cpp  ProcessingChain.cpp  RenderPipeline.cpp  SessionSnapshot.cpp  SharedMemoryRegion.cpp  TapeColoringSink.cpp  TapeWriter.cpp  WetCaptureWriter.cpp
host/: CMakeLists.txt
host/src/: ClapBundleLoader.cpp  ClapScanner.cpp  GenericParameterView.cpp  OutOfProcessEditorView.cpp  OutOfProcessEditorView.mm  OutOfProcessEffectChainHost.cpp  OutOfProcessPluginInstance.cpp  PluginGuiBridge.cpp  PluginGuiBridge.mm  PluginScanner.cpp
host_process/: CMakeLists.txt  gui_cocoa.mm  main.cpp
net/: CMakeLists.txt
net/src/: LmcElection.cpp  SessionMerge.cpp
otto-bridge/: CMakeLists.txt
otto-bridge/src/: OttoHost.cpp
persistence/: CMakeLists.txt
persistence/src/: ProjectPaths.cpp  SessionFormat.cpp  TapeStore.cpp
tests/: ArchivalModeTests.cpp  ArrangementTests.cpp  AsrcTests.cpp  AudioCallbackTests.cpp  AudioDeviceCalibrationTests.cpp  BlankSessionTests.cpp  BusInternalFxEndToEndTests.cpp  BusProcessedTapTests.cpp  BusTests.cpp  CARemoteLayerRoundTripTests.mm  CMakeLists.txt  CalibrationRecoveryTests.cpp  CapabilityTierTests.cpp  CaptureSessionTests.cpp  ChannelStripTests.cpp  ChannelTests.cpp  ClapBundleLoaderTests.cpp  ClapScannerTests.cpp  CmpAdapterTests.cpp  ConstituentEffectChainCloneTests.cpp  ConstituentStateTests.cpp  ConstituentTests.cpp  DemoSessionTests.cpp  DirectLayerTests.cpp  DlyAdapterTests.cpp  EffectChainTests.cpp  EqAdapterTests.cpp  FileInputDescriptorTests.cpp  FileInputPersistenceTests.cpp  FileInputPlaylistTests.cpp  FileInputRegistryTests.cpp  FileInputSourceTests.cpp  FlacTapeSinkTests.cpp  FrameMembraneTests.cpp  HysteresisProcessorJATests.cpp  IdaMasterMeterTests.cpp  IdaMasterSpectrumTests.cpp  IdaProjectTests.cpp  InputDescriptorTests.cpp  InputMixerBusMonitorPersistenceTests.cpp  (+91 more)
tests/fixtures/: CMakeLists.txt  StatefulSynthFixture.cpp  StatefulSynthFixture.version  SyntheticTestPlugin.cpp  SyntheticTestPlugin.plist.in  SyntheticTestPlugin.version  SyntheticTestPluginGui.mm
tools/tapecolor_plugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
ui/: CMakeLists.txt
ui/lookandfeel/: OTTOColours.h  OTTOLookAndFeel.cpp  OTTOLookAndFeel.h
ui/src/: ChannelDetail.cpp  ChannelDetailCMPTab.cpp  ChannelDetailEQTab.cpp  CmpMeterView.cpp  EqCurveView.cpp  InsertChainPopup.cpp  LatencyBudget.cpp  PerformanceView.cpp  PerformanceViewState.cpp  PreparationView.cpp  PreparationViewState.cpp  TimelineView.cpp  TimelineViewState.cpp  UndoStack.cpp
video/: CMakeLists.txt
video/src/: FrameMembrane.cpp  VideoPreview.cpp
xpc_service/: CMakeLists.txt  Info.plist.in  main.cpp
(+291 files in other folders)
